--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "diff-match-patch",
-  "version": "1.1.0",
+  "name": "@hackmd/diff-match-patch",
+  "version": "1.1.1",
   "description": "npm package for https://code.google.com/p/google-diff-match-patch/",
   "keywords": [],
   "dependencies": {},
+  "main": "index.js",
   "devDependencies": {
     "testit": "~1.1.0"
   },
